--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@tensorflow-models/knn-classifier": "^0.2.2",
     "@tensorflow-models/mobilenet": "^0.2.2",
     "@tensorflow/tfjs": "^0.13.0",
-    "express": "^4.16.4"
+    "express": "^4.15.2",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "start": "budo main.js:dist/build.js --live --host localhost",
